--- a/src/global-styles/_lazy-img.scss
+++ b/src/global-styles/_lazy-img.scss
@@ -5,14 +5,12 @@
     background-size: cover;
     background-position: center;
 
-    // if the height is 0, observer will intersect everything... todo...
     min-height: 300px; // todo: remove this
 }
 
-.lazy-img picture,
 .lazy-img img {
     width: 100%;
-    height: 300px; // todo: picture can't be 100% (???)
+    height: 300px; // todo: remove this
 }
 
 .lazy-img img {
