--- a/src/global-styles/_base.scss
+++ b/src/global-styles/_base.scss
@@ -26,5 +26,69 @@
 
 body {
     font-family: var(--font-main);
-    color: var(--clr-black);
+    color: var(--clr-dark-gray);
+}
+
+// grid container
+
+.page-wrapper {
+    --page-padding: 1rem;
+
+    display: grid;
+    align-content: start;
+    grid-template-columns: var(--page-padding) auto var(--page-padding);
+    row-gap: 2rem;
+}
+
+.wrapper-item {
+    grid-column: 2 / 3;
+
+    display: grid;
+    align-content: start;
+    justify-items: start;
+}
+
+// Links
+
+.link {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 3.6em;
+    background-color: var(--clr-black);
+    text-decoration: none;
+}
+
+.link,
+.link-arrow {
+    transition: background-color .3s;
+}
+
+.link p {
+    padding: 0 1.6em;
+
+    color: var(--clr-white);
+    font-family: var(--font-heading);
+    font-weight: 700;
+    font-size: 1.25rem;
+    letter-spacing: 0.182em;
+    text-transform: uppercase;
+}
+
+.link-arrow {
+    padding: 0 .8em;
+    height: 100%;
+
+    background-color: var(--clr-brown);
+    object-fit: none;
+}
+
+.link:hover,
+.link:focus {
+    background-color: var(--clr-brown);
+}
+
+.link:hover .link-arrow,
+.link:focus .link-arrow {
+    background-color: var(--clr-black);
 }
