--- a/src/global-styles/_lazy-img.scss
+++ b/src/global-styles/_lazy-img.scss
@@ -4,13 +4,11 @@
     position: relative;
     background-size: cover;
     background-position: center;
-
-    min-height: 300px; // todo: remove this
 }
 
 .lazy-img img {
     width: 100%;
-    height: 300px; // todo: remove this
+    height: 100%;
 }
 
 .lazy-img img {
