--- a/src/global-styles/_footer.scss
+++ b/src/global-styles/_footer.scss
@@ -1,10 +1,17 @@
 footer {
     background-color: var(--clr-black);
     color: var(--clr-white);
-    padding: 3rem 1rem;
+    padding: 3rem 2rem;
+}
+
+.footer-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 2.25rem;
 }
 
 .footer-logo {
+    width: fit-content;
     height: 2.5rem;
 }
 
@@ -19,4 +26,21 @@ footer {
 
 .social-link:hover svg path {
     fill: var(--clr-brown);
+}
+
+@media (min-width: 48em) {
+
+    footer {
+        padding: 3rem 2.625rem;
+    }
+
+    .footer-wrapper {
+        flex-direction: row;
+        gap: 0;
+    }
+
+    .footer-text {
+        margin: 0 auto 0 4rem;
+        max-width: 40%;
+    }
 }
