--- a/src/page-home/styles/_overview.scss
+++ b/src/page-home/styles/_overview.scss
@@ -24,3 +24,56 @@
 .visit-text-container .overview-title {
     color: var(--clr-white);
 }
+
+.overview-img-1,
+.overview-img-2,
+.overview-img-3 {
+    width: 100%;
+}
+
+
+@media (min-width: 48em) {
+
+    .wrapper-item.section-activities,
+    .wrapper-item.section-visit {
+        grid-column: 2 / span 12;
+        grid-template-columns: subgrid;
+    }
+
+    .overview-img-1,
+    .activities-text-container {
+        grid-row: 1 / span 1;
+    }
+
+    .overview-img-1 {
+        grid-column:6 / span 7;
+    }
+
+    .activities-text-container {
+        grid-column: 1 / span 4;
+    }
+
+    // section visit
+
+    .wrapper-item.section-visit {
+        align-content: start;
+        grid-template-rows: auto 1fr;
+        gap: var(--gap);
+    }
+
+    .overview-img-2 {
+        grid-column: 1 / span 7;
+        grid-row: 1 / 3;
+    }
+
+    .overview-img-3,
+    .visit-text-container {
+        grid-column: 8 / span 5;
+    }
+
+    .visit-text-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
