Add home page desktop styles

--- a/src/global-styles/_base.scss
+++ b/src/global-styles/_base.scss
@@ -60,6 +60,15 @@ body {
 
 }
 
+@media (min-width: 75em) {
+
+    .page-wrapper {
+        --gap: 1.875rem; //30px
+        --page-padding: 8.375rem; 
+    }
+
+}
+
 // Links
 
 .link {
