--- a/src/page-home/styles/_hero.scss
+++ b/src/page-home/styles/_hero.scss
@@ -33,3 +33,54 @@
     }
 
 }
+
+@media (min-width: 75em) {
+
+    .section-hero::before {
+        width: 100%;
+        height: 100%;
+
+        content: '';
+
+        grid-row: 1 / -1;
+        grid-column: 1 / span 5;
+        z-index: -1;
+
+        background-color: var(--clr-black);
+    }
+
+    .hero-img {
+        grid-column: 5 / span 6;
+        z-index: 1;
+    }
+
+    .hero-text-container {
+        grid-column: 2 / span 12;
+        grid-template-columns: subgrid;
+        row-gap: 4rem;
+        z-index: 2;
+
+        margin-bottom: 7.75rem;
+    }
+
+    .hero-title {
+        width: 100%;
+        grid-column: 1 / span 6;
+        grid-row: 1 / 3;
+
+        color: transparent;
+        background: linear-gradient(
+                to right, 
+                var(--clr-white) calc(50% + (var(--gap) / 2)), 
+                var(--clr-black) calc(50% - (var(--gap) / 2))
+            );
+        -webkit-background-clip: text;
+        background-clip: text;
+    }
+
+    .hero-text,
+    .hero-location-link {
+        grid-column: 9 / -1;
+    }
+
+}
