--- a/src/global-styles/_footer.scss
+++ b/src/global-styles/_footer.scss
@@ -4,7 +4,7 @@ footer {
     padding: 3rem 2rem;
 }
 
-.footer-wrapper {
+footer .page-wrapper {
     display: flex;
     flex-direction: column;
     gap: 2.25rem;
@@ -32,6 +32,10 @@ footer {
 
     footer {
         padding: 3.5rem 0;
+    }
+
+    footer .page-wrapper {
+        display: grid;
     }
 
     .footer-logo {
