--- a/src/page-location/styles/index.scss
+++ b/src/page-location/styles/index.scss
@@ -1,7 +1,90 @@
-.section-map {
-    background-color: yellowgreen;
+// Map
+
+.section-map .wrapper-item {
+    grid-row: 1 / -1;
+    grid-column: 1 / -1;
 }
 
+.wrapper-item.back-link {
+    max-width: max-content;
+}
+
+.section-map .lazy-img {
+    
+    z-index: -1;
+}
+
+@media (min-width: 48em) {
+    .wrapper-item.back-link {
+        grid-column: 2 / -1;
+    }   
+}
+
+// Address
+
 .section-address {
-    background-color: pink;
+    background-color: var(--clr-black);
+    color: var(--clr-white);
+    padding: 2.5rem 0;
+    row-gap: 2.5rem;
+}
+
+.section-address address {
+    font-style: normal;
+}
+
+.address-title {
+    color: var(--clr-white);
+}
+
+.street {
+    color: var(--clr-brown);
+    display: inline-block;
+    margin-bottom: 1.25rem;
+}
+
+.address-overview {
+    margin-top: 1.25rem;
+}
+
+@media (min-width: 48em) {
+
+    .section-address {
+        padding: 5rem 0;
+    }
+
+    // wrapper item
+
+    .address-title {
+        grid-column: 2 / span 5;
+        max-width: 10ch;
+    }
+
+    .address-container {
+        grid-column: 7 / span 7;
+    }
+
+}
+
+@media (min-width: 75em) {
+
+    .section-address {
+        padding: 6.5rem 0;
+    }
+
+}
+
+// footer
+
+footer {
+    background-color: var(--clr-brown);
+    color: var(--clr-black);
+}
+
+.social-link svg path {
+    fill: var(--clr-black);
+}
+
+.social-link:hover svg path {
+    fill: var(--clr-white);
 }
